--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/5.5000-5999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/5.5000-5999-of-mysql-mode.md
@@ -765,10 +765,7 @@ ERROR 5307 (HY000) : Not enough thread resource to execute the query. Require se
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <ul>
-    <li> 该错误码在 V4.0.0 版本开始进行了修改，错误信息由 <code>ERROR 5307 (HY000) : Scheduler thread number is not enough </code> 调整为 <code>ERROR 5307 (HY000) : Not enough thread resource to execute the query. Require setting parallel_servers_target to a value no less than %ld for this query </code>。 </li>
-    <li> 有关该系统变量的详细信息，请参见 OceanBase 数据库官方文档的 《系统参考》中的系统变量章节。 </li>
-    </ul>
+    <p>该错误码在 V4.0.0 版本开始进行了修改，错误信息由 <code>ERROR 5307 (HY000) : Scheduler thread number is not enough </code> 调整为 <code>ERROR 5307 (HY000) : Not enough thread resource to execute the query. Require setting parallel_servers_target to a value no less than %ld for this query </code>。</p>
   </main>
   
 ERROR 5309 (HY000) : Ignore sql in restore process
