--- a/zh-CN/7.reference/7.command-line-tools/11.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
+++ b/zh-CN/7.reference/7.command-line-tools/11.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
@@ -1,6 +1,6 @@
 # 使用安装包安装部署 oblogproxy
 
-您可以通过下载安装包和使用源码两种方式安装部署 oblogproxy。本文将介绍如何通过下载安装包的方式安装部署 oblogproxy。
+您可以通过下载安装包和使用源码两种方式安装部署 oblogproxy。本文将介绍如何通过下载压缩包的方式安装部署 oblogproxy。
 
 ## 背景信息
 
@@ -19,25 +19,31 @@ oblogproxy 能够解决网络隔离的情况下，订阅增量日志的需求，
     </ul>
   </main>
 
-### 配置 OceanBase yum 源
+### 下载安装 oblogproxy
 
-```bash
-yum install -y yum-utils
-yum-config-manager --add-repo https://mirrors.aliyun.com/oceanbase/OceanBase.repo
+您可在 oblogproxy 开源社区中下载 [oblogproxy V1.1.0](https://github.com/oceanbase/oblogproxy/releases/tag/v1.1.0) 版本的压缩包。
+
+下载完成后，将压缩包解压到安装目录下，本示例以 `/usr/local` 为例。
+
+通过如下命令进行解压操作：
+
+```shell
+tar -zxf oblogproxy-ce-for-4x-xxxx.tar.gz -C /usr/local
 ```
 
-### 下载安装预编译包
+解压完成后，指定临时环境变量。
 
-您可在 [开源镜像站](https://mirrors.aliyun.com/oceanbase/community/stable/el/7/x86_64/) 下载预编译包，oblogproxy 的包名是 "oblogproxy-xxxx.系统版本.x86_64.rpm"，可根据自己的系统选取，安装命令如下：
+* 指定 logproxy 运行的路径。
 
-```bash
-yum install -y oblogproxy-xxxx.系统版本.x86_64.rpm
-```
+  ```shell
+  export PATH=$PATH:/usr/local/oblogproxy/bin
+  ```
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>oblogproxy 默认安装在目录 <code>/usr/local/oblogproxy</code> 下。</p>
-  </main>
+* 指定依赖的路径。
+
+  ```shell
+  export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/oblogproxy/liboblog
+  ```
 
 ### 配置系统租户
 
@@ -45,35 +51,36 @@ yum install -y oblogproxy-xxxx.系统版本.x86_64.rpm
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>此处的用户名不应包含集群名称或租户名称。</p>
+    <p>此处的用户名不应包含集群名称和租户名称。</p>
   </main>
 
-您获得 OBServer 节点的 sys 租户账号和密码后，需要通过加密配置给 oblogproxy.执行以下命令即可得到账号和密码的密文：
-
-```bash
-# 这里假设账号和密码分别为：user，pswd
-./logproxy -x user
-# 执行后将会输出 4B9C75F64934174F4E77EE0E9A58****
-./logproxy -x pswd
-# 执行后将会输出 DCE2AF09D006D6A440816880B938****
+```shell
+sh run.sh config_sys sys_user sys_pwd
 ```
 
-把获得的账号和密码的密文分别配置到 `/usr/local/oblogproxy/conf/conf.json` 中的 `ob_sys_username` 和 `ob_sys_password` 字段，例如：
+参数说明：
 
-```bash
-{
-  "ob_sys_username": "4B9C75F64934174F4E77EE0E9A58****",
-  "ob_sys_password": "DCE2AF09D006D6A440816880B938****"
-}
+* `sys_user`：用户名。
+* `sys_pwd`：用户密码。
+
+示例如下：
+
+```shell
+sh run.sh config_sys sys passwd
 ```
 
 ### 运行 oblogproxy
 
-您可以通过以下命令启动该服务：
+先进入 oblogproxy 目录
 
-```bash
+```shell
 cd /usr/local/oblogproxy
-bash ./run.sh start
+```
+
+再通过以下命令启动该服务：
+
+```shell
+./run.sh start
 ```
 
 默认监听 `2983` 端口，修改 `conf.json` 中的 `service_port` 字段可更换监听端口。oblogproxy 的服务日志位于 `logs/`，LogReader（任务线程）的服务日志位于 `run/{client-id}/logs/`。
@@ -102,8 +109,8 @@ ObReaderConfig config = new ObReaderConfig();
 // 设置OceanBase root server 地址列表，格式为（可以支持多个，用';'分隔）：ip1:rpc_port1:sql_port1;ip2:rpc_port2:sql_port2
 config.setRsList("xxx.xxx.xxx.1:2882:2881;xxx.xxx.xxx.2:2882:2881");
 // 设置用户名和密码（非系统租户）
-config.setUsername("root");
-config.setPassword("root");
+config.setUsername("r***");
+config.setPassword("****");
 // 设置启动位点（UNIX时间戳，单位s）, 0表示从当前时间启动。
 config.setStartTimestamp(0L);
 // 设置订阅表白名单，格式为：tenant.db.table, '*'表示通配.
