--- a/en-US/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/10.other-functions-of-mysql-mode/16.inet6-aton-of-mysql-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/10.other-functions-of-mysql-mode/16.inet6-aton-of-mysql-mode.md
@@ -16,11 +16,11 @@ Limits on arguments of the `INET6_ATON()` function:
 
 * Zone IDs are not allowed at the end of an address, as in fc50::3%1 or fc50::3%eth1.
 
-* Network masks are not allowed at the end of an address, as in 2002:45f:3:ba::/64 or 198.51.100.0/24.
+* Network masks are not allowed at the end of an address, as in 2002:45f:3:ba::/64 or 198.xx.100.0/24.
 
 * Only a classless address can be used to represent the value of an IPv4 address. A classful address such as 198.51.1 will be rejected.
 
-* Port numbers are not allowed at the end of an address, as in 198.51.100.2:8082.
+* Port numbers are not allowed at the end of an address, as in 198.xx.100.2:8082.
 
 * Hexadecimal characters are not allowed in an address, as in 198.0xa0.1.2.
 
