--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/10.other-functions-of-mysql-mode/16.inet6-aton-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/10.other-functions-of-mysql-mode/16.inet6-aton-of-mysql-mode.md
@@ -16,15 +16,15 @@ INET6_ATON(expr)
 
 * 不允许在尾部使用 Zone ID，例如 fc50::3%1 或 fc50::3%eth1。
 
-* 不允许在尾部使用网络掩码，如 2002:45f:3:ba::/64 或 198.51.100.0/24。
+* 不允许在尾部使用网络掩码，如 2002:45f:3:ba::/64 或 198.xx.100.0/24。
 
 * 仅支持使用无类地址表示 IPv4 地址的值。诸如 198.51.1 之类的有类地址会被拒绝。
 
-* 不允许在尾部使用端口号，例如 198.51.100.2:8082。
+* 不允许在尾部使用端口号，例如 198.xx.100.2:8082。
 
 * 地址中不允许使用十六进制数字，例如 198.0xa0.1.2。
 
-* 不支持八进制数：198.51.010.1 被视为 198.51.10.1，而不是 198.51.8.1。
+* 不支持八进制数：198.xx.010.1 被视为 198.xx.10.1，而不是 198.xx.8.1。
 
 这些 IPv4 限制也适用于具有 IPv4 地址部分的 IPv6 地址，例如 IPv4 兼容地址或 IPv4 映射地址。
 
