--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
@@ -56,7 +56,7 @@ opt_set_sys_var:
 | PRIMARY_ZONE             | 指定租户的 Primary Zone。Primary Zone 表示 Leader 副本的偏好位置。指定 Primary Zone 实际上是指定了 Leader 更趋向于被调度到哪个 Zone 上。 Primary Zone 实际上是一个 Zone 的列表，列表中包含多个 Zone。当 Primary Zone 列表包含多个 Zone 时，使用分号（;）分隔的 Zone 具有从高到底的优先级；使用逗号（,）分隔的 Zone 具有相同优先级。例如，`primary_ zone =' zone1; zone2, zone3'` 表示该租户的表的分区 Leader 在 `zone1` 上， `zone1` 比 `zone2`、`zone3` 的优先级高，`zone2` 和 `zone3` 是同一优先级。 <blockquote>注意  </br>在指定 `PRIMARY_ZONE` 时，其值可以设置为 `RANDOM`（必须大写），表示随机选择最高优先级内的任意一个 Zone 作为 Primary Zone。</blockquote>  </br>更多 Primary Zone 相关的介绍信息请参见 [Primary Zone](../../../1.oceanbase-database-concepts/5.distributed-database-objects/2.cluster-architecture.md)。 |
 | LOCALITY                 | 指定副本在 Zone 间的分布情况。 </br>例如：`F@z1,F@z2,F@z3,F@z4` 表示 `z1`、`z2`、`z3` 、`z4` 为全功能副本。           |
 | ENABLE_ARBITRATION_SERVICE | 指定租户是否开启仲裁服务，如果不显示指定，默认创建的租户其仲裁服务为关闭状态。 如果创建租户的时候未开启仲裁服务，可以在创建租户后再开启仲裁服务，详细操作请参见 [开启仲裁服务](../../../../6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md)。
-| system_var_name          | 可选，指定租户的系统变量值，其中： <ul><li>变量 `ob_compatibility_mode` 用于指定租户的兼容模式，可选择 MySQL 或 Oracle 模式，并且只能在创建时指定。如果不指定 `ob_compatibility_mode`，则默认兼容模式为 MySQL 模式。</li> <li>变量 `ob_tcp_invited_nodes` 用于指定租户连接的白名单，即允许哪些客户端 IP 连接该租户。如果不调整 `ob_tcp_invited_nodes` 的值，则默认租户的连接方式为只允许本机的 IP 连接数据库。 </br>您也可以待租户创建成功后再修改其白名单设置，修改白名单的具体操作请参见 [设置和查看租户白名单](10.configure-and-view-the-tenant-whitelist.md)。    </br>OceanBase 数据库中，租户可设置的系统变量请参见 [系统变量](../../../5.system-reference/2.system-variable-of-mysql-mode/1.overview-of-system-variables-of-mysql-mode.md)。             |
+| system_var_name          | 可选，指定租户的系统变量值，其中： <ul><li>变量 `ob_compatibility_mode` 用于指定租户的兼容模式，可选择 MySQL 或 Oracle 模式，并且只能在创建时指定。如果不指定 `ob_compatibility_mode`，则默认兼容模式为 MySQL 模式。</li> <li>变量 `ob_tcp_invited_nodes` 用于指定租户连接的白名单，即允许哪些客户端 IP 连接该租户。如果不调整 `ob_tcp_invited_nodes` 的值，则默认租户的连接方式为只允许本机的 IP 连接数据库。 </br>您也可以待租户创建成功后再修改其白名单设置，修改白名单的具体操作请参见 [设置和查看租户白名单](10.configure-and-view-the-tenant-whitelist.md)。        |
 
 ### 新建租户示例
 
