--- a/zh-CN/7.reference/5.system-reference/2.system-variable/4.session-system-variable/74.ob_enable_show_trace-session.md
+++ b/zh-CN/7.reference/5.system-reference/2.system-variable/4.session-system-variable/74.ob_enable_show_trace-session.md
@@ -16,5 +16,5 @@ ob_enable_show_trace 用于设置是否使用 show trace 日志。
 | 参数类型    | bool                    |
 | 默认值     | 0                       |
 | 取值范围    | <li> 0：不开启</li>   <li> 1：开启</li>        |
-| 生效范围    | <li> GLOBAL</li>   <li> SESSION</li>    |
+| 生效范围    |SESSION   |
 | 是否参与序列化 | 是                       |
