--- a/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/3.use-outfile-statements-to-migrate-data.md
+++ b/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/3.use-outfile-statements-to-migrate-data.md
@@ -88,7 +88,7 @@ start_and_end_option:
 
     使用管理员用户（MySQL 模式：`root`；Oracle 模式：`SYS`）登录到集群对应的租户，设置系统变量 `secure_file_priv`，配置导入或导出文件时可以访问的路径。
 
-    系统变量 `secure_file_priv` 用于控制导入或导出到文件时可以访问的路径。默认值为 `NULL`，表示导入、导出被禁用。详细信息，请参见 [secure_file_priv（MySQL 模式）](../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/115.secure_file_priv-of-mysql-mode.md) 和 [secure_file_priv（Oracle 模式）](../../7.reference/5.system-reference/3.system-variable-of-oracle-mode/114.secure_file_priv-of-oracle-mode.md)。
+    系统变量 `secure_file_priv` 用于控制导入或导出到文件时可以访问的路径。默认值为 `NULL`，表示导入、导出被禁用。详细信息，请参见 [secure_file_priv](../../7.reference/5.system-reference/2.system-variable/3.global-system-variable/115.secure_file_priv-global.md) 。
 
    <main id="notice" type='notice'>
      <h4>注意</h4>
