--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/12.delete-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/12.delete-tenant.md
@@ -88,7 +88,7 @@ OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
     1 row in set
     ```
 
-    回收站相关参数的详细说明，参见 [recyclebin（Oracle 模式）](../../../7.reference/5.system-reference/3.system-variable-of-oracle-mode/112.recyclebin-of-oracle-mode.md)。
+    回收站相关参数的详细说明，参见 [recyclebin](../../../7.reference/5.system-reference/2.system-variable/3.global-system-variable/113.recyclebin-global.md)。
 
 ## 相关文档
 
