--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/6.view-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/6.view-system-variables-of-tenant.md
@@ -141,4 +141,5 @@
 
 关于系统变量的更多信息，参见：
 
+* [系统变量概述](../../../7.reference/5.system-reference/2.system-variable/1.overview-of-system-variables.md)
 * [修改系统变量](7.modify-system-variables-of-tenant.md)
