--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/5.logical-connection/4.show-session-variables.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/5.logical-connection/4.show-session-variables.md
@@ -129,4 +129,4 @@ obclient> SHOW PROXYSESSION VARIABLES all 2147549231 like "%id%";
 
 ## 相关信息
 
-有关系统变量的详细介绍请参见 [系统变量概述（Oracle 模式）](../../../../7.reference/5.system-reference/3.system-variable-of-oracle-mode/1.overview-of-system-variables-of-oracle-mode.md)。有关用户变量设置，请参见 [SET](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/82.set-of-mysql-mode.md)。
+有关系统变量的详细介绍请参见 [系统变量概述](../../../../7.reference/5.system-reference/2.system-variable/1.overview-of-system-variables.md) 。
