--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/3.stop-or-start-observer.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/3.stop-or-start-observer.md
@@ -38,7 +38,7 @@ obclient> ALTER SYSTEM STOP SERVER 'ip:port' [,'ip:port'...] [ZONE='zone'];
 
   SQL 超时时间可通过租户变量 `ob_query_timeout` 来设置，该变量的默认值为 `10000000`，单位为微秒，具体设置方法可参见 [设置变量](../../2.configuration-management/3.set-variables.md)。
 
-  更多变量 `ob_query_timeout` 的介绍信息请参见 [ob_query_timeout](../../../../5.system-reference/2.system-variable-of-mysql-mode/90.ob_query_timeout-of-mysql-mode.md) 。
+  更多变量 `ob_query_timeout` 的介绍信息请参见 [ob_query_timeout](../../../../5.system-reference/2.system-variable/3.global-system-variable/90.ob_query_timeout-global.md) 。
   
 * 如果命令很快执行失败，那么可能是日志不同步，需要查询 `oceanbase.DBA_OB_ROOTSERVICE_EVENT_HISTORY` 视图，确认是否有 Stop Server 的记录。如果没有记录，则说明在 RS 没执行 Stop Server 操作前就失败了；如果有记录，则说明是日志不同步导致 Stop Server 操作执行失败。
 
