--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/3.define-an-auto-increment-column-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/3.define-an-auto-increment-column-of-mysql-mode.md
@@ -12,6 +12,8 @@
 | auto_increment_increment  | Session 级变量，用于设置自增步长，取值范围为 \[1, 65535\]，默认值为 `1`。                    |
 | auto_increment_offset     | Session 级变量，用于确定 `AUTO_INCREMENT` 列值的起点，取值范围为 \[1, 65535\]，默认值为 `1`。 |
 
+系统变量的设置方法及说明请参见 [系统变量概述](../../../../5.system-reference/2.system-variable/1.overview-of-system-variables.md)。
+
 ## 创建自增列
 
 如果在创建表时指定了自增列，则在使用 `INSERT` 语句插入记录时不需要指定自增列的值，OceanBase 数据库会自动为该列填充值。
