--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md
@@ -28,11 +28,11 @@
 
 * 通过 DBLink 向远端数据库写入数据时，暂不支持通过设置 `autocommit = True` 来开启事务的自动提交，并且通过 DBLink 写入数据的操作一旦开启 XA 事务，系统就会将本 Session 的 `autocommit` 值强制置为 `False`，直到 XA 事务提交或者回滚后，才会恢复 `autocommit` 原本的值。
 
-  系统变量 `autocommit` 用于设置是否开启自动提交事务，默认值为 `True`，更多系统变量 `autocommit` 的说明信息，参见 [autocommit](../../../../5.system-reference/3.system-variable-of-oracle-mode/6.autocommit-of-oracle-mode.md)。
+  系统变量 `autocommit` 用于设置是否开启自动提交事务，默认值为 `True`，更多系统变量 `autocommit` 的说明信息，参见 [autocommit](../../../../5.system-reference/2.system-variable/3.global-system-variable/6.autocommit-global.md)。
 
 * 如果预期 XA 事务耗时较长，为了防止 XA 事务超时出现非预期的错误，可以使用 `set ob_trx_timeout = 1000000000;` 语句提前调大事务的超时时间。
   
-  系统变量 `ob_trx_timeout` 用于设置事务的超时时间，默认值为 `86400000000`，单位为微秒。更多系统变量 `ob_trx_timeout` 相关的信息，参见 [ob_trx_timeout](../../../../5.system-reference/3.system-variable-of-oracle-mode/102.ob_trx_timeout-of-oracle-mode.md)。
+  系统变量 `ob_trx_timeout` 用于设置事务的超时时间，默认值为 `86400000000`，单位为微秒。更多系统变量 `ob_trx_timeout` 相关的信息，参见 [ob_trx_timeout](../../../../5.system-reference/2.system-variable/3.global-system-variable/103.ob_trx_timeout-global.md)。
 
 ## 修改远端数据库中的数据
 
