--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md
@@ -126,7 +126,7 @@ obclient> desc test;
 
   创建外键约束时，如果不指定外键名，系统会自动分配一个约束名，自动分配的约束名为 `表名_OBFK_创建时间戳`。例如，`t1_OBFK_1627747200000000`。
 
-  OceanBase 数据库默认开启了外键约束检查，外键约束检查开关由租户变量 `foreign_key_checks` 来控制。`foreign_key_checks` 变量的更多说明，请参见 [foreign_key_checks](../../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/27.foreign_key_checks-of-mysql-mode.md)。
+  OceanBase 数据库默认开启了外键约束检查，外键约束检查开关由租户变量 `foreign_key_checks` 来控制。`foreign_key_checks` 变量的更多说明，请参见 [foreign_key_checks](../../../7.reference/5.system-reference/2.system-variable/3.global-system-variable/27.foreign_key_checks-global.md)。
   
 * `CHECK` 约束：要求数据库中某列的值符合指定的条件。
 
@@ -234,6 +234,8 @@ Query OK, 1 row affected
 | auto_increment_cache_size | Global 级变量，用于设置自增的缓存个数，取值范围为 \[1, 100000000\]，默认值为 `1000000`。       |
 | auto_increment_increment  | Session 级变量，用于设置自增步长，取值范围为 \[1, 65535\]，默认值为 `1`。                    |
 | auto_increment_offset     | Session 级变量，用于确定 `AUTO_INCREMENT` 列值的起点，取值范围为 \[1, 65535\]，默认值为 `1`。 |
+
+您可以根据业务需要，修改这三个系统变量的值，修改系统变量的操作请参见 [系统变量概述](../../../7.reference/5.system-reference/2.system-variable/1.overview-of-system-variables.md)。
 
 以下是定义自增列需要遵循的要求：
 
