--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
@@ -124,7 +124,7 @@ obclient [SYS]> desc ordr;
 
   创建外键约束时，如果不指定外键名，系统会自动分配一个约束名，自动分配的约束名为 `表名_OBFK_创建时间戳`。例如，`t1_OBFK_1627747200000000`。
 
-  OceanBase 数据库默认开启了外键约束检查，外键约束检查开关由租户变量 `foreign_key_checks` 来控制。`foreign_key_checks` 变量的更多说明，请参见 [foreign_key_checks](../../../7.reference/5.system-reference/3.system-variable-of-oracle-mode/27.foreign_key_checks-of-oracle-mode.md)。
+  OceanBase 数据库默认开启了外键约束检查，外键约束检查开关由租户变量 `foreign_key_checks` 来控制。`foreign_key_checks` 变量的更多说明，请参见 [foreign_key_checks](../../../7.reference/5.system-reference/2.system-variable/3.global-system-variable/27.foreign_key_checks-global.md)。
   
 * `CHECK` 约束：要求数据库中某列的值符合指定的条件。
 
