--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/7.modify-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/7.modify-system-variables-of-tenant.md
@@ -119,4 +119,5 @@ SET GLOBAL foreign_key_checks = 0;
 
 关于系统变量的更多信息，参见：
 
+* [系统变量概述](../../../7.reference/5.system-reference/2.system-variable/1.overview-of-system-variables.md)
 * [查看系统变量](6.view-system-variables-of-tenant.md)
