--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/4.define-the-constraint-type-for-a-column-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/4.define-the-constraint-type-for-a-column-of-mysql-mode.md
@@ -72,7 +72,7 @@
 
   OceanBase 数据库默认开启了外键约束检查，外键约束检查开关由租户变量 `foreign_key_checks` 来控制。
 
-  更多 `foreign_key_checks` 变量的说明，请参见 [foreign_key_checks](../../../../5.system-reference/2.system-variable-of-mysql-mode/27.foreign_key_checks-of-mysql-mode.md)。
+  更多 `foreign_key_checks` 变量的说明，请参见 [foreign_key_checks](../../../../5.system-reference/2.system-variable/3.global-system-variable/27.foreign_key_checks-global.md)。
   
 * `CHECK` 约束：要求数据库中某列的值符合指定的条件。
 
