--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/6.annotation-of-oracle-mode/4.hint-of-oracle-mode/2.hint-list-of-oracle-mode/7.other-hints-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/6.annotation-of-oracle-mode/4.hint-of-oracle-mode/2.hint-list-of-oracle-mode/7.other-hints-of-oracle-mode.md
@@ -4,7 +4,7 @@ OceanBase 数据库还支持 CURSOR_SHARING_EXACT Hint、MONITOR Hint、PX_JOIN_
 
 ## CURSOR_SHARING_EXACT Hint
 
-OceanBase 数据库支持使用绑定变量替换 SQL 语句中的字面量，此功能由 `CURSOR_SHARING` 变量控制，即当`cursor_sharing='exact'` 时不需要参数化，详细信息请参见 [cursor_sharing](../../../../../../../5.system-reference/3.system-variable-of-oracle-mode/20.cursor_sharing-of-oracle-mode.md)。
+OceanBase 数据库支持使用绑定变量替换 SQL 语句中的字面量，此功能由 `CURSOR_SHARING` 变量控制，即当`cursor_sharing='exact'` 时不需要参数化，详细信息请参见 [cursor_sharing](../../../../../../../5.system-reference/2.system-variable/3.global-system-variable/20.cursor_sharing-global.md)。
 
 用户可以指定 `CURSOR_SHARING_EXACT` Hint 来指示优化器关闭此行为。当您指定此 Hint 时，OceanBase 数据库在执行 SQL 语句时不会尝试将字面量替换为绑定变量，从而实现参数改写。
 
