Update the introduction to yaml file

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -25,10 +25,14 @@
 
   OceanBase Database Proxy，OceanBase 高性能反向代理服务器，简称为 ODP（又称为 OBProxy）。详细信息请参考 [ODP 文档](https://www.oceanbase.com/docs/odp-cn)。
 
+* OCP
+  
+  OceanBase Cloud Platform，OceanBase 运维管理工具，简称为 OCP，是一款为 OceanBase 数据库集群量身打造的企业级管理平台，提供对 OceanBase 集群的图形化管理能力。详细信息请参考 [OCP 文档](https://www.oceanbase.com/docs/oceanbase-ocp-cn)
+
 * OCP Express
   
   基于 Web 的 OceanBase 数据库 4.x 管理工具，融合在 OceanBase 数据库集群中，支持对数据库集群关键性能及基本数据库管理功能。详细信息请参考 [OceanBase 云平台 Express (OCP Express)](../../../7.reference/6.oceanbase-tools/4.1.ocp-express.md)。
-  
+
 ## 前提条件
 
 在连接 OceanBase 数据库之前，请您确认以下信息：
@@ -178,11 +182,18 @@
 
    * 分布式部署 + ODP 配置样例：mini-distributed-with-obproxy-example.yaml、distributed-with-obproxy-example.yaml
 
-   * 分布式部署 + ODP + OCP Express 配置样例：all-components-min.yaml、all-components.yaml
+   * 分布式部署 + ODP + OCP Express 配置样例：default-components.yaml、default-components-min.yaml
+
+   * 分布式部署全部组件：all-components-min.yaml、all-components.yaml
+
+   <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>若您选择部署 OCP Express 或已部署 OCP，则无需部署 Prometheus 和 Grafana。</p>
+   </main>
 
 5. 修改配置文件。
 
-   此处以使用 all-components.yaml 部署分布式 OceanBase 集群为例，介绍如何修改配置文件。
+   此处以使用 default-components.yaml 部署分布式 OceanBase 集群为例，介绍如何修改配置文件。
 
    <main id="notice" type='explain'>
     <h4>说明</h4>
@@ -231,8 +242,6 @@
           enable_syslog_wf: false # Print system logs whose levels are higher than WARNING to a separate log file. The default value is true.
           enable_syslog_recycle: true # Enable auto system log recycling or not. The default value is false.
           max_syslog_file_count: 4 # The maximum number of reserved log files before enabling auto recycling. The default value is 0.
-          skip_proxy_sys_private_check: true
-          enable_strict_kernel_release: false
           ocp_meta_tenant: # The config for ocp express meta tenant
             tenant_name: ocp
             max_cpu: 1
